# ansible-collection-resolver

./: .ansible-lint.yml  .gitignore  .yamllint  Makefile  README.md  devbox.json  galaxy.yml  pyproject.toml  requirements.yml
.github/workflows/: libvirt.yml  lint.yml  release.yml
molecule/common/: converge.yml  prepare.yml  verify.yml
molecule/install/: molecule.yml
playbooks/: configure.yml  defaults.yml
