[tool.poetry]
name = "pokerops-resolver"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
crowdstrike-falconpy = "^1.4.6"
yq = "^3.4.3"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.6.0", markers = "platform_system != 'Windows'" }
ansible = "^10.0.1"
molecule = "^24.6.0"
molecule-plugins = "^23.5.3"
yamllint = "^1.35.1"
netaddr = "^1.3.0"
libvirt-python = "^10.5.0"
lxml = "^5.2.2"
passlib = "^1.7.4"
jmespath = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
